# remem0

./: .gitignore  Cargo.toml  README.md
decks/: rem-red-team-diff-report.html  rem-temporal-graph-diff-report.html  rem-temporal-graph-implementation-deck.html  rem-usage-guide.html  semantic-memory-conflict-review.html  temporal-graph-primer.html
docs/: local-deployment.md
scripts/: install-local.sh
src/: cli.rs  config.rs  conflict.rs  doctor.rs  frontmatter.rs  index.rs  main.rs  memory.rs  output.rs  policy.rs  review.rs  search.rs  semantic.rs  transaction.rs  tui.rs  workspace.rs
tests/: cli.rs  configure_tui.rs
